--- a/padding/index.html
+++ b/padding/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/padding/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1 class="title">Hola mundo</h1>
+    <a class="edarcode" href="#">edarcode</a>
+  </body>
 </html>
